feat: menu createPortal

--- a/site/component/app.scss
+++ b/site/component/app.scss
@@ -11,7 +11,8 @@
 .app-content {
   position: relative;
   min-height: calc(100vh - 66px - 36px);
-  background-color: #f9fbfd;
+  // background-color: #dfecfa;
+  background-color: #fff;
 }
 
 .app-footer {
