--- a/src/tooltip/style.scss
+++ b/src/tooltip/style.scss
@@ -5,5 +5,8 @@
 $tooltip-prefix: 'dk-tooltip';
 
 .#{$tooltip-prefix} {
-
+  position: absolute;
+  border-radius: 4px;
+  line-height: 1.2;
+  min-width: 10px;
 }
