--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -343,7 +343,9 @@ $menu-shadow:                           0 2px 8px rgba($black, .25) !default;
 
 // Tooltip
 //
+$tooltip-dark-bg:                       #303133 !default;
+$tooltip-dark-color:                    $white !default;
 $tooltip-padding:                       10px !default;
+$tooltip-border-radius:                 $border-radius !default;
 $tooltip-arrow-size:                    6px !default;
 $tooltip-font-size:                     12px !default;
-$tooltip-color:                         $white !default;
