--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -323,6 +323,8 @@ $grid-half-gutter-width:            $grid-gutter-width * 0.5;
 $menu-bg:                               $white !default;
 $menu-width:                            240px !default;
 $menu-border-color:                     $border-color !default;
+$menu-item-group-height:                34px !default;
+$menu-item-group-padding-x:             10px !default;
 $menu-vertical-item-height:             40px !default;
 $menu-vertical-item-padding-x:          20px !default;
 $menu-horizontal-item-height:           60px !default;
