--- a/site/component/common/sidebar.scss
+++ b/site/component/common/sidebar.scss
@@ -5,15 +5,20 @@
   left: 0;
   height: 100%;
   width: 250px;
+  border-right: 1px solid #e3ebf6;
   overflow: scroll;
+  z-index: 9;
 
   &-logo {
+    position: relative;
     display: flex;
     width: 100%;
-    height: 90px;
+    height: 72px;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    // box-shadow: 0 1px 9px -3px rgba(0, 0, 0, .2);
+    z-index: 1;
 
     &-img {
       width: 54.5px;
@@ -30,5 +35,11 @@
 
   &-menu {
     width: 100%;
+    border-right: none;
+  }
+
+  &-switch {
+    width: 100%;
+    height: 48px;
   }
 }
