--- a/site/component/common/header.scss
+++ b/site/component/common/header.scss
@@ -1,4 +1,16 @@
 .app-header {
   height: 72px;
   border-bottom: 1px solid #e3ebf6;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.header-github {
+  width: 32px;
+  height: 32px;
+}
+
+.header-link {
+  padding-right: 24px;
 }
