--- a/src/table/style.scss
+++ b/src/table/style.scss
@@ -1,3 +1,6 @@
+@import '../style/functions';
+@import '../style/theme';
+@import '../style/mixins';
 
 $table-prefix: 'dk-table';
 
@@ -9,7 +12,7 @@ $table-prefix: 'dk-table';
     width: 100%;
     border-collapse: collapse;
     vertical-align: middle;
-    background-color: #fff;
+    background-color: $table-bg;
   }
 
   tr {
@@ -17,22 +20,22 @@ $table-prefix: 'dk-table';
   }
 
   th {
-    padding: 12px;
+    padding: $table-cell-padding;
     text-align: inherit;
     font-weight: 600;
     letter-spacing: .08em;
-    color: #909399;
-    border-top: 1px solid #edf2f9;
-    border-bottom: 1px solid #edf2f9;
-    background-color: #f9fbfd;
-    font-size: 12px;
+    color: $table-head-color;
+    border-top: 1px solid $table-border-color;
+    border-bottom: 1px solid $table-border-color;
+    background: $table-head-bg;
+    font-size: $font-size-sm;
   }
 
 
   td {
-    padding: 12px;
-    font-size: 14px;
-    border-bottom: 1px solid #edf2f9;
+    padding: $table-cell-padding;
+    font-size: $font-size-base;
+    border-bottom: 1px solid $table-border-color;
   }
 
   th,
@@ -55,10 +58,10 @@ $table-prefix: 'dk-table';
     padding: 12px;
     border-width: 1px 1px 0 1px;
     border-style: solid;
-    border-color: #edf2f9;
+    border-color: $table-border-color;
     font-weight: 600;
-    font-size: 12px;
-    color: #909399;
+    font-size: $font-size-sm;
+    color: $gray-600;
   }
 
   &-header {
@@ -73,12 +76,11 @@ $table-prefix: 'dk-table';
 
   &-body {
     position: relative;
-    background: #fff;
     z-index: 9;
 
     tr {
       &:hover td {
-        background-color: rgba(0, 0, 0, 0.02);
+        background-color: $table-hover-bg;
       }
     }
   }
@@ -87,7 +89,7 @@ $table-prefix: 'dk-table';
     width: 100%;
     padding: 12px;
     text-align: center;
-    color: rgba(0, 0, 0, .45);
+    color: $gray-500;
   }
 
 
