--- a/src/checkbox/style.scss
+++ b/src/checkbox/style.scss
@@ -9,7 +9,6 @@ $checkbox-prefix: 'dk-checkbox';
   display: inline-block;
   margin: 0;
   padding: 0;
-  margin-right: $checkbox-margin-right;
   vertical-align: middle;
   cursor: pointer;
 
@@ -39,7 +38,7 @@ $checkbox-prefix: 'dk-checkbox';
     // transition: all .3s;
 
     & + span {
-      padding-left: 7px;
+      padding-left: $checkbox-padding-x;
       line-height: 18px;
       vertical-align: middle;
     }
@@ -48,7 +47,6 @@ $checkbox-prefix: 'dk-checkbox';
       content: '';
       display: block;
       position: absolute;
-      z-index: 10;
       top: 20%;
       left: 2px;
       height: 35%;
@@ -57,7 +55,6 @@ $checkbox-prefix: 'dk-checkbox';
       border-top: 0;
       border-right: 0;
       transition: all .1s $ease-in-back, opacity .1s;
-      // transform-origin: center;
       transform: rotate(-45deg);
       opacity: 0;
     }
@@ -65,6 +62,16 @@ $checkbox-prefix: 'dk-checkbox';
 
     &:hover {
       border-color: $checkbox-active-color;
+    }
+  }
+
+  &-group {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+
+    &-item {
+      margin-right: $checkbox-margin-right;
     }
   }
 
@@ -94,9 +101,7 @@ $checkbox-prefix: 'dk-checkbox';
     }
   }
 
-  &-disabled,
-  &-disabled:hover,
-  &-disabled &-checked {
+  &-disabled {
     .#{$checkbox-prefix}-indicator {
       border-color: $gray-500;
       background-color: $input-disabled-bg;
