--- a/src/radio/style.scss
+++ b/src/radio/style.scss
@@ -11,4 +11,75 @@ $radio-prefix: 'dk-radio';
   padding: 0;
   vertical-align: middle;
   cursor: pointer;
+
+  &-input {
+    outline: none;
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin: 0;
+    z-index: -1;
+    opacity: 0;
+  }
+
+  &-indicator {
+    position: relative;
+    display: inline-block;
+    width: $radio-size;
+    height: $radio-size;
+    overflow: hidden;
+    border: 1px solid $border-color;
+    border-radius: 50%;
+    vertical-align: middle;
+    line-height: 1;
+    white-space: nowrap;
+    transition: $radio-indicator-transtion;
+
+    &+span {
+      padding-left: $radio-padding-x;
+      line-height: 18px;
+      vertical-align: middle;
+    }
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 8px;
+      height: 8px;
+      background-color: $radio-active-color;
+      transition: transform .1s $ease-in-back;
+      border-radius: 50%;
+      transform: translate(-50%, -50%) scale(0);
+    }
+
+
+    &:hover {
+      border-color: $radio-active-color;
+    }
+  }
+
+  &-checked &-indicator {
+    border-color: $radio-active-color;
+
+    &:after {
+      transition: transform .2s $ease-out-back;
+      transform: translate(-50%, -50%) scale(1);
+    }
+  }
+
+  &-disabled {
+    pointer-events: none;
+
+    .#{$radio-prefix}-indicator {
+      border-color: $gray-500;
+      background-color: $input-disabled-bg;
+
+      &:after {
+        border-color: $gray-500;
+      }
+    }
+  }
 }
