--- a/src/style/_reboot.scss
+++ b/src/style/_reboot.scss
@@ -239,19 +239,19 @@ td {
 // Forms
 //
 
-label {
-  display: inline-block;
-  margin-bottom: 8px;
-}
+// label {
+//   display: inline-block;
+//   margin-bottom: 8px;
+// }
 
-button {
-  border-radius: 0;
-}
+// button {
+//   border-radius: 0;
+// }
 
-button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-}
+// button:focus {
+//   outline: 1px dotted;
+//   outline: 5px auto -webkit-focus-ring-color;
+// }
 
 input,
 button,
